# agas-ros-pkg

./: Information.md  ProjectHome.md
catkin_ws_obj_rec/src/Libraries/robbie_architecture/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
catkin_ws_obj_rec/src/obj_rec_gui/src/Devices/: CMakeLists.txt
catkin_ws_obj_rec/src/obj_rec_gui/src/Devices/ImageGrabber/: CMakeLists.txt  Camera.cpp  Camera.h  GrabberUtils.cpp  GrabberUtils.h  GrabbingDevice.cpp  GrabbingDevice.h  GrabbingDeviceManager.cpp
catkin_ws_obj_rec/src/obj_rec_gui/src/Widgets/ImageMessagesDisplay/: CMakeLists.txt  ImageMessagesDisplay.h  ImageSourceSelector.cpp  ImageSourceSelector.h
catkin_ws_obj_rec/src/obj_rec_gui/src/Widgets/ObjectRecognition/: CMakeLists.txt  ObjectImagesControl.h  ObjectRecognitionDisplay.h
catkin_ws_obj_rec/src/obj_rec_gui/src/Widgets/SensorDataDisplay/: CMakeLists.txt  ImagePainter.cpp  ImagePainter.h  LaserScan3DPainter.cpp  LaserScan3DPainter.h  NewLaserDataPainter.h  POIPainter.cpp  PainterPlugin.cpp  PainterPlugin.h  ParticleGridPainter.cpp  ParticlePainter.h  PathPainter.cpp  PersonPainter.h  PersonParticlePainter.h  RGBDepthPainter.h  RobotPosesPainter.h  SceneGraphPainter.cpp  SceneGraphPainter.h  SensorDataDisplay.cpp  SensorDataGLWidget.h  SkeletonPainter.cpp  SkeletonPainter.h  SonarPainter.cpp  SonarPainter.h
catkin_ws_obj_rec/src/obj_rec_gui/src/Workers/ObjectRecognition/: CMakeLists.txt  CvFundamentalMat.cpp  CvHomography.cpp  CvHomography.h  FLANNMatcher.h  HoughAccumulator.cpp  HoughAccumulator.h  HoughClusterer.cpp  HoughClusterer.h  HoughIndexCalculator.cpp  HoughIndexCalculator.h  MatchHelper.cpp  MatchHelper.h  MatchResult.h  SimpleHoughClusterer.cpp  SimpleHoughClusterer.h
catkin_ws_obj_rec/src/vision/object_recognition/or_libs/: CMakeLists.txt
catkin_ws_obj_rec/src/vision/object_recognition/or_libs/catkin_generated/: setup_cached.sh
catkin_ws_obj_rec/src/vision/object_recognition/or_msgs/: CMakeLists.txt  package.xml
catkin_ws_obj_rec/src/vision/object_recognition/or_msgs/msg/: KeyPointMatchArray.msg  OrCommand.msg  OrLearnCommand.msg
catkin_ws_obj_rec/src/vision/object_recognition/or_nodes/: CMakeLists.txt  package.xml
catkin_ws_obj_rec/src/vision/object_recognition/or_nodes/config/: default.xml
catkin_ws_obj_rec/src/vision/object_recognition/or_nodes/launch/: obj_learn.launch
catkin_ws_obj_rec/src/vision/object_recognition/or_nodes/objectProperties/: pritt.objprop
catkin_ws_obj_rec/src/vision/object_recognition/or_nodes/src/: obj_rec.cpp
object_recognition/or_libs/src/KeyPointExtraction/: CMakeLists.txt  KeyPointExtractor.h  SurfExtractorBase.h
object_recognition/or_libs/src/ObjectRecognition/: CMakeLists.txt  FLANNMatcher.cpp  FLANNMatcher.h  HoughAccumulator.h  HoughIndexCalculator.cpp  NNRMatcher.cpp  SimpleHoughClusterer.cpp
object_recognition/src/obj_rec_gui/: CMakeLists.txt  homer_display_or_final.rviz  package.xml
object_recognition/src/obj_rec_gui/launch/: obj_rec_gui.launch
object_recognition/src/obj_rec_gui/src/: MainWindow.cpp  MainWindow.ui  QtRosNode.h  listener.cpp  main.cpp  rosprocessbutton.h  talker.h
object_recognition/src/obj_rec_gui/src/Containers/ObjectLearningTab/: CMakeLists.txt  ObjectLearningTab.cpp
object_recognition/src/obj_rec_gui/src/Containers/ObjectRecognitionTab/: CMakeLists.txt  ObjectRecognitionTab.cpp  ObjectRecognitionTab.h
object_recognition/src/obj_rec_gui/src/Devices/ImageGrabber/: GrabbingDeviceManager.h  ImageGrabber.cpp  ImageGrabber.h
object_recognition/src/obj_rec_gui/src/Widgets/: CMakeLists.txt
object_recognition/src/obj_rec_gui/src/Widgets/GLImageWidget/: CMakeLists.txt  GLImageWidget.cpp  GLImageWidget.h
object_recognition/src/obj_rec_gui/src/Widgets/ImageMessagesDisplay/: ImageMessagesDisplay.cpp
object_recognition/src/obj_rec_gui/src/Widgets/ObjectRecognition/: ObjectImagesControl.cpp  ObjectLearningControl.cpp  ObjectLearningControl.h  ObjectList.cpp  ObjectList.h  ObjectRecognitionDisplay.cpp
object_recognition/src/obj_rec_gui/src/Widgets/SensorDataDisplay/: MapPainter.cpp  MapPainter.h  NewLaserDataPainter.cpp  POIPainter.h  PainterCheckBox.cpp  PainterCheckBox.h  ParticleGridPainter.h  ParticlePainter.cpp  PathPainter.h  PersonPainter.cpp  PersonParticlePainter.cpp  RGBDepthPainter.cpp  RobotPainter.cpp  RobotPainter.h  RobotPosesPainter.cpp  SensorDataDisplay.h  SensorDataGLWidget.cpp  SilhouettePainter.cpp  SilhouettePainter.h  TofPainter.cpp  TofPainter.h
object_recognition/src/obj_rec_gui/src/Workers/: CMakeLists.txt
object_recognition/src/obj_rec_gui/src/Workers/CoordinateConverter/: CMakeLists.txt
object_recognition/src/obj_rec_gui/src/Workers/ImageSources/: ImageSources.cpp  ImageSources.h
object_recognition/src/obj_rec_gui/src/Workers/KeyPointExtraction/: CMakeLists.txt  DefaultExtractor.cpp  DefaultExtractor.h  KeyPoint.h  KeyPointExtractor.h  KeyPointHelper.h  OrigSurfExtractor.cpp  SurfExtractorBase.h
object_recognition/src/obj_rec_gui/src/Workers/ObjectRecognition/: CvFundamentalMat.h  FLANNMatcher.cpp  ImageProperties.cpp  ImageProperties.h  NNRMatcher.cpp  NNRMatcher.h  ObjectProperties.cpp  ObjectProperties.h
object_recognition/src/obj_rec_gui/src/Workers/ParallelSurf/: BoxFilter.h
object_recognition/src/obj_rec_gui/src/Workers/PointOfInterest/: PoiManager.h  PointOfInterest.cpp
object_recognition/src/obj_rec_gui/src/Workers/Puma2/: BaseImageTemplate.h  CMakeLists.txt  ColorImageRGB8.cpp  ColorImageRGBa8.cpp  ColorImageUV8.cpp  Feature.h  GaussOperator.h  GrayLevelImage8.cpp  GrayLevelImage8.h  HistogramUV.h  (+25 more)
old_version_obj_rec/object_recognition/or_nodes/: CMakeLists.txt  manifest.xml
old_version_obj_rec/object_recognition/or_nodes/config/: custom.xml  default.xml  merged.xml
old_version_obj_rec/object_recognition/or_nodes/launch/: obj_learn.launch
old_version_obj_rec/object_recognition/or_nodes/src/Modules/: CMakeLists.txt  ORControlModule.cpp  ORLearningModule.cpp  ORMatchingModule.cpp  ORMatchingModule.h
robot_face/: CMakeLists.txt  manifest.xml  robot_face.launch
robot_face/src/: QtRosNode.cpp  TalkingHead.cpp
(+223 files in other folders)
