#add_subdirectory(BatteryRead)
#add_subdirectory(GamePad)
add_subdirectory(ImageGrabber)
#add_subdirectory(KatanaArm)
#add_subdirectory(LaserScanner)
#add_subdirectory(MessageIO)
#add_subdirectory(PanTiltUnit)
#add_subdirectory(PioneerRobot)
#add_subdirectory(Roomba)
#add_subdirectory(SoundIO)
#add_subdirectory(SpeechOut)
#add_subdirectory(SpeechRec)
#add_subdirectory(VirtualKatanaArm)
