<package>
  <name>or_msgs</name>
  <description>
    or_msgs 
  </description>
  <maintainer email="raphael@uni-koblenz.de">raphael</maintainer>
  <version>0.0.1</version>
  <author>raphael</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/user_distance_tracker</url>
  <build_depend>message_generation</build_depend>
  <build_depend>genmsg</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslang</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <build_depend>roscpp_serialization</build_depend>

</package>


